# terra-store

./: .flake8  .gitignore  .pep257  .prospector.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  prod-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml
docs/: _config.yml  index.md
integration-tests/: Dockerfile  Dockerfile.proxy  test.sh
integration-tests/nginx/: config.cnf  proxy_ssl.conf
integration-tests/terraform/: main.tf
src/: api.py
terraform_module_registry_api/: api.py  registry.py  swagger.yml
terraform_module_registry_api/backends/: dummy.py
terraform_registry_api/: __init__.py  registry.py
terraform_registry_api/terraform_module_registry_api/: __init__.py  api.py  exceptions.py  swagger.yml
terraform_registry_api/terraform_module_registry_api/backends/: __init__.py  abstract.py  dummy.py  filesystem.py
tests/: test_module_registry_api.py  test_registry.py
tests/backend/: test_filesystem.py
