[metadata]
# replace with your username:
name = terraform_registry_api
version = 0.0.1
author = Jamie Duncombe
author_email = jamie@jduncombe.com
description = Terraform registry API for Terra-store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-store/terra-store
project_urls =
    Bug Tracker = https://github.com/terra-store/terra-store/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .